--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>ToDoList</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>ToDoList</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link id="prime-theme" rel="stylesheet" type="text/css" href="lara-dark-blue.css">
+  </head>
 <body>
   <app-root></app-root>
 </body>
